# django-mqtt

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  signals.py  vernemq.py
.github/workflows/: django.yml
dmqtt/: mosquitto.py  shortcuts.py  signals.py  vernemq.py
dmqtt/management/commands/: __init__.py  mqtt-test.py  mqtt.py
management/commands/: mqtt.py
tests/: __init__.py  settings.py  test_mosquitto.py  test_mqtt_wildcards.py  urls.py
tests/example/: __main__.py  settings.py
tests/fixtures/: default.json
