[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mqtt"
version = "0.4.3"
license = { text = "MIT License" }
authors = [{ name = "Paul Traylor" }]
keywords = ["django mqtt"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
dependencies = [
    "Django>=3.2",
    "paho-mqtt",
]

[tool.setuptools.packages.find]
exclude = ["test"]

[project.urls]
Issues = "http://github.com/kfdm/django-mqtt/issues"
"Source Code" = "http://github.com/kfdm/django-mqtt"

[tool.ruff]
line-length = 100
