[metadata]
name = django-mqtt
author = Paul Traylor
version = 0.0.2
license = MIT License
url = http://github.com/kfdm/django-mqtt
project_urls =
    Issues=http://github.com/kfdm/django-mqtt/issues
    Source Code=http://github.com/kfdm/django-mqtt
keywords = django mqtt
long_description_content_type = text/markdown
long_description = file:README.md
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP
license_files = LICENSE

[options]
packages = find:
install_requires =
    Django>=2.0
    paho-mqtt

[options.packages.find]
exclude = test


[isort]
forced_separate = django,dmqtt
known_django = django
known_first_party = dmqtt
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
