[metadata]
name = django-mqtt
author = Paul Traylor
version = 0.4.1
license = MIT License
url = http://github.com/kfdm/django-mqtt
project_urls =
    Issues=http://github.com/kfdm/django-mqtt/issues
    Source Code=http://github.com/kfdm/django-mqtt
keywords = django mqtt
long_description_content_type = text/markdown
long_description = file:README.md
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
license_files = LICENSE

[options]
python_requires = >=3.6
packages = find:
install_requires =
    Django>=3.2
    paho-mqtt

[options.packages.find]
exclude = test


[isort]
forced_separate = django,dmqtt
known_django = django
known_first_party = dmqtt
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
